kubernetes/commafeed/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commafeed
  namespace: commafeed
  labels:
    app: commafeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commafeed
  template:
    metadata:
      labels:
        app: commafeed
    spec:
      containers:
        - name: commafeed
          image: athou/commafeed:latest-h2
          ports:
            - containerPort: 8082
          volumeMounts:
            - name: data
              mountPath: /commafeed/data
          resources:
            requests:
              memory: 256Mi
              cpu: 250m
            limits:
              memory: 512Mi
              cpu: 500m
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: commafeed-data
