kubernetes/commafeed/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commafeed-ingress
  namespace: commafeed
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: commafeed-service
      port:
        number: 8082
  tls:
    - hosts:
        - rss
